--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -120,5 +121,8 @@
       }
     }
   },
-  "defaultProject": "Catalogo-Ang"
+  "defaultProject": "Catalogo-Ang",
+  "cli": {
+    "analytics": "bd1c9799-0693-4474-aef7-4bd556e992bb"
+  }
 }
